fix watch script and set up for handling offsets

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ui": "vite --host",
     "build": "npm run buildReact && npm run typecheckServer",
     "buildReact": "vite build && npm run typecheck",
-    "dev": "node --watch server/server.ts",
+    "dev": "node --watch-path server server/server.ts",
     "pm2": "pm2 start server/server.ts",
     "deploy": "git fetch && git reset --hard origin/release && pm2 flush && pm2 delete all && pm2 start server/ecosystem.config.js",
     "prettier": "npx prettier --write .",
